# pacl

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.demo  README.md  cloudbuild.demo.yaml  pyproject.toml
demo/: README.md  agent.py  app.py  contexts.py  routes.py
demo/static/: index.html
demo/tests/: test_alerts.py
scripts/: deploy.sh  wipe.py
src/pacl/: __init__.py  config.py  events.py  mcp_identity.py  mcp_server.py  pending.py  roles.py  server.py  substrate.py
src/pacl/agents/: intermediary.py  prompts.py  tools.py
src/pacl/evals/: harness.py  matrix.py  run_matrix.py
tests/: test_eval_harness.py  test_intermediary.py  test_intermediary_behavior.py  test_mcp_identity.py  test_mcp_server.py  test_pending.py  test_roles.py  test_server.py  test_substrate.py
